Changed Base64 impl to avoid javax.bind (dropped in Java >= 8)